Changed Gemfile for Heroku

--- a/app/assets/stylesheets/business-casual.css
+++ b/app/assets/stylesheets/business-casual.css
@@ -2,8 +2,11 @@
  * Start Bootstrap - Business Casual Bootstrap Theme (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
+ */ */
+ 
+body {
+    background-image: url(/assets/bg.jpg);
+}
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     background: url('http://ironsummitmedia.github.io/startbootstrap-business-casual/img/bg.jpg') no-repeat center center fixed;
@@ -11,6 +14,7 @@ body {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    background-image: url(/assets/bg.jpg);
 }
 
 h1,
