--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -2,6 +2,7 @@
 <li>
     <%= link_to 'Home', root_path %>
 </li>
+
 <li>
     <%= link_to 'About', page_path('about') %>
 </li>
@@ -10,4 +11,9 @@
 </li>
 <li>
     <%= link_to 'Contact', page_path('contact') %>
+</li>
+<li>
+ 
+    <%= link_to ' Furniture',  furnitures_path %>
+
 </li>
