--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -1,5 +1,6 @@
-<div class="brand">Business Casual</div>
-<div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+<div class="brand">Brand Tanganyika </div>
+<div class="address-bar">1274 Meru Kenya </KE>| Tel No 072955277 | 123.456.7890</div>
+
 
 <%= render 'layouts/navigation' %>
 
