--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,5 +1,5 @@
-<div class="brand">Business Casual</div>
-<div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+<div class="brand">Brand Tanganyika </div>
+<div class="address-bar">1274 Meru Kenya </KE>| Tel No 072955277 | 123.456.7890</div>
 
 <%= render 'layouts/navigation' %>
 
@@ -14,20 +14,34 @@
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    </ol>
+                    </ol
+                     
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive img-full" src="http://ironsummitmedia.github.io/startbootstrap-business-casual/img/slide-1.jpg" alt="">
+                            <img class="img-responsive img-full"src="/assets/honor.jpg"  class="expand"  alt="" class="expand" >
                         </div>
                         <div class="item">
-                            <img class="img-responsive img-full" src="http://ironsummitmedia.github.io/startbootstrap-business-casual/img/slide-2.jpg" alt="">
+                            <img class="img-responsive img-full" img src="/assets/honor.jpg" alt="" class="expand" >
                         </div>
                         <div class="item">
-                            <img class="img-responsive img-full" src="http://ironsummitmedia.github.io/startbootstrap-business-casual/img/slide-3.jpg" alt="">
+                            <img class="img-responsive img-full"src="/assets/honor.jpg"  alt="" class="expand" >
                         </div>
                     </div>
+                    
+                     <div class="carousel-inner">
+                            <div class="item active">
+                                <img class="img-responsive img-full" src="img/slide-1.jpg" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive img-full" src="img/slide-2.jpg" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive img-full" src="img/slide-3.jpg" alt="">
+                            </div>
+                        </div>
+                    
 
                     <!-- Controls -->
                     <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -40,11 +54,11 @@
                 <h2 class="brand-before">
                     <small>Welcome to</small>
                 </h2>
-                <h1 class="brand-name">Business Casual</h1>
+                <h1 class="brand-name">Brand Tanganyika </h1>
                 <hr class="tagline-divider">
                 <h2>
                     <small>By
-                        <strong>Start Bootstrap</strong>
+                        <strong>Developer Newton </strong>
                     </small>
                 </h2>
             </div>
@@ -55,29 +69,34 @@
         <div class="box">
             <div class="col-lg-12">
                 <hr>
-                <h2 class="intro-text text-center">Build a website
-                    <strong>worth visiting</strong>
+                <h2 class="intro-text text-center">Where Quality
+                    <strong>Negotiable prices</strong>
                 </h2>
                 <hr>
-                <img class="img-responsive img-border img-left" src="http://ironsummitmedia.github.io/startbootstrap-business-casual/img/intro-pic.jpg" alt="">
+                <img class="img-responsive img-border img-left" src="img/slide-1.jpg" alt="">
                 <hr class="visible-xs">
-                <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-                <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-            </div>
-        </div>
+                <p>We are a Group of companies who make the best quality furniture for household, office and school purpose all for your need . We have over 40 years experience in the business and are adding some more, we love to make you comfortable and happy.</p>
+                <p> We take pride in thanking our  founding fathers for the amazing work they did in starting this comapny and we wil forever iconize them in our hearts and lives the late <b> Masawe </b>  and the late mr <b>Mboya</b> your work is valued.</p>
+                <p>Our company has evolved to a digital nature encompassing all geographical area of kenuya and the nearby cities, we would like to futther expand and thank all of our customers for their continued support through out the years.we love you so much </p>
+       class="btn btn-default">Go to Google
+      
     </div>
 
     <div class="row">
         <div class="box">
             <div class="col-lg-12">
                 <hr>
-                <h2 class="intro-text text-center">Beautiful boxes
-                    <strong>to showcase your content</strong>
+                <h2 class="intro-text text-center">Beautiful items
+                    <strong>worth your money</strong>
                 </h2>
                 <hr>
-                <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                <p>We make custom household,school and office furniture in both large and small quantities. We deal with both imports and exports. feel free to visit any of our local offices to place an order </p>
+                <p>order on any piece of furniture of your liking on the button below ! They are great for just about anything, the sky's the limit!</p>
+                <li> order now </li>
+                <li> get 10% discount on all online orders </li>
+                
+               
+                  <a href="/orders" <button type="button" class="btn btn-primary btn-lg btn-block">Order now</button></a>
             </div>
         </div>
     </div>
