--- a/app/views/layouts/_nav_links_for_auth.html.erb
+++ b/app/views/layouts/_nav_links_for_auth.html.erb
@@ -1,9 +1,13 @@
 <% if user_signed_in? %>
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
-  <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
+  <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %>
+    <%= link_to 'Brand Tanganyika ', root_path, class: 'navbar-brand' %>
+  </li>
+  
 <% else %>
   <li><%= link_to 'Sign in', new_user_session_path %></li>
   <li><%= link_to 'Sign up', new_user_registration_path %></li>
+    <%= link_to 'Brand Tanganyika ', root_path, class: 'navbar-brand' %>
 <% end %>
 <% if user_signed_in? %>
   <li><%= link_to 'Users', users_path %></li>
