--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,3 +1,5 @@
+
+
 <div class="brand">Brand Tanganyika </div>
 <div class="address-bar">1274 Meru Kenya </KE>| Tel No 072955277 | 123.456.7890</div>
 
@@ -9,7 +11,7 @@
         <div class="box">
             <div class="col-lg-12">
                 <hr>
-                <h2 class="intro-text text-center">Contact
+                <h2 class="intro-text text-center">Order Form
                     <strong>Brand Tanganyika</strong>
                 </h2>
                 <hr>
@@ -27,7 +29,7 @@
                 </p>
                 <p>Address:
                     <strong>1274 Meru Kenya  </strong>
-                        <br>Meru County , CA 90210</strong>
+                        <br>Meru County , C 90210</strong>
                 </p>
             </div>
             <div class="clearfix"></div>
@@ -38,7 +40,7 @@
         <div class="box">
             <div class="col-lg-12">
                 <hr>
-                <h2 class="intro-text text-center">Contact
+                <h2 class="intro-text text-center">Order
                     <strong>form</strong>
                 </h2>
                 <hr>
