--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="brand">Business Casual</div>
+<div class="brand">Brand Tanganyika</div>
 <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
 
 <%= render 'layouts/navigation' %>
@@ -10,17 +10,17 @@
             <div class="col-lg-12">
                 <hr>
                 <h2 class="intro-text text-center">About
-                    <strong>business casual</strong>
+                    <strong>Brand Tanganyika </strong>
                 </h2>
                 <hr>
             </div>
             <div class="col-md-6">
-                <img class="img-responsive img-border-left" src="http://ironsummitmedia.github.io/startbootstrap-business-casual/img/slide-2.jpg" alt="">
+                <img class="img-responsive img-border-left" src="/assets/octo.jpg"  alt="">
             </div>
             <div class="col-md-6">
-                <p>This is a great place to introduce your company or project and describe what you do.</p>
-                <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                <p>We mkae custom made Desighns for Office , household, school and institutional furniture .</p>
+                <p>Most of our items are authentic rare and excuisitely made using locally avaialble materuals with skilled craftsmen from different backgrounds. we are a family enterprise wich works for the best always .</p>
+                <p>Feel free to place an order with our trusted agent from this website, we value oyur presence as a customer and wish you can come visit us soon in one of our local workshops in kenya.</p>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -37,19 +37,19 @@
             </div>
             <div class="col-sm-4 text-center">
                 <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
+                <h3>Naomi Robert 
+                    <small>Director of Operations </small>
                 </h3>
             </div>
             <div class="col-sm-4 text-center">
                 <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
+                <h3>Gitobu Gitobu
+                    <small>Human Resource 
                 </h3>
             </div>
             <div class="col-sm-4 text-center">
                 <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                <h3>John Smith
+                <h3>John 
                     <small>Job Title</small>
                 </h3>
             </div>
